apps/general/heimdall-redirect-ssh-check.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: heimdall-redirect-ssh-check
  namespace: general
  labels:
    app.kubernetes.io/name: heimdall-redirect-ssh-check
    app.kubernetes.io/instance: heimdall-redirect-ssh-check-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  redirectRegex:
    regex: ^https?://(www\.)?romanpeters\.nl/ssh$
    replacement: https://s3.romanpeters.nl/www/ssh
    permanent: false
