apps/general/homebox-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  labels:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/instance: homebox-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homebox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homebox
    spec:
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox:0.24.2@sha256:532e0428d922fdea2441b31c1eb5b4018e5f1b2684273bee06dba102db576f30
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7745
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homebox-data
