apps/general/forgejo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  labels:
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/instance: forgejo-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  selector:
    app.kubernetes.io/name: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh
