apps/general/miniflux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  labels:
    app.kubernetes.io/name: miniflux
    app.kubernetes.io/instance: miniflux-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: public
spec:
  selector:
    app.kubernetes.io/name: miniflux
  ports:
    - name: http
      port: 80
      targetPort: http
