apps/general/forgejo-ssh-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: forgejo-ssh
  namespace: general
  labels:
    app.kubernetes.io/name: forgejo-ssh
    app.kubernetes.io/instance: forgejo-ssh-prod
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: flux
    exposure: internal
spec:
  entryPoints:
    - ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: forgejo
          port: 22
